# KeilUpdateTool

./: README.md  keil_tool_core.py  keil_tool_gui.py  main.py  main.spec  pyproject.toml
src/keil_tool/: __init__.py  constants.py  exceptions.py
src/keil_tool/core/: __init__.py  keil_project.py
src/keil_tool/ui/: __init__.py  cli.py  gui.py
src/keil_tool/utils/: __init__.py  file_utils.py
